--- a/uploads/ppt/index.html
+++ b/uploads/ppt/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>毕设中期报告</title>
+		<title> 毕设PPT</title>
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -81,7 +81,7 @@
 						</section>
 						<section>
 							<h2>源码地址</h2>
-							<a style="color:#1ab11d" href="https://github.com/dcy0701/mid-term-ppt">github</a>
+							<a style="color:#1ab11d" href="https://github.com/dcy0701/project_manage_system/tree/master/uploads/ppt">github</a>
 							<br/>
 							<br/>
 							<code style="margin-top:200px">
@@ -347,16 +347,8 @@
 				<section data-background="#4d7e65" data-background-transition="slide">
 					<h2>Q & A </h2>
 				</section>
-				<section>
-					<section data-background="#b5533c" data-background-transition="zoom">
-						<h2>Thanks</h2>
-					</section>
-					<section >
-
-					</section>
-					<section data-background="#b5533c" data-background-transition="fade">
-						<h1>I just want to say that all of this is rubbish.</h1>
-					</section>
+				<section data-background="#b5533c" data-background-transition="zoom">
+					<h2>Thanks</h2>
 				</section>
 
 			</div>
