--- a/uploads/ppt/index.html
+++ b/uploads/ppt/index.html
@@ -328,19 +328,31 @@
 						4. 安全性
 					</script>
 				</section>
+				<section>
+						<section data-markdown data-background="#b5533c" data-background-transition="zoom">
+							<script type="text/template">
+								#### 总结
 
-				<section data-markdown data-background="#b5533c" data-background-transition="zoom">
+								本课题利用了很多最前沿的新兴技术，
+								在语言层次使用了ES协会2015年标准的ES2015 和 2016年标准的ES2016 ，
+								在IOS APP框架选择了Facebook React Native ，
+								在状态管理上选择了当前最难的Redux方案等，
+								并且利用了很多先进的思想以及面向未来的框架。
+								本课题选择的技术都是非常有深度的，当然也使我受益良多。
+								能够将当前最前沿的技术顺利完成和展现对我来讲是一件非常有难度的事情。
+								当然也有一些不足之处，比如选取的后端框架对于异步的处理并不好，包括国内也有一些其他的解决方案。
+							</script>
+						</section>
+				</section>
+				<section data-background="#4d7e65" data-background-transition="slide">
 					<script type="text/template">
-						#### 总结
+						#### 创新点
 
-						本课题利用了很多最前沿的新兴技术，
-						在语言层次使用了ES协会2015年标准的ES2015 和 2016年标准的ES2016 ，
-						在IOS APP框架选择了Facebook React Native ，
-						在状态管理上选择了当前最难的Redux方案等，
-						并且利用了很多先进的思想以及面向未来的框架。
-						本课题选择的技术都是非常有深度的，当然也使我受益良多。
-						能够将当前最前沿的技术顺利完成和展现对我来讲是一件非常有难度的事情。
-						当然也有一些不足之处，比如选取的后端框架对于异步的处理并不好，包括国内也有一些其他的解决方案。
+						1. ES2015 AND ES2016
+						2. React Native
+						3. Redux
+						4. Promise AND Genorator
+
 					</script>
 				</section>
 
