--- a/uploads/ppt/index.html
+++ b/uploads/ppt/index.html
@@ -343,18 +343,19 @@
 								当然也有一些不足之处，比如选取的后端框架对于异步的处理并不好，包括国内也有一些其他的解决方案。
 							</script>
 						</section>
-				</section>
-				<section data-background="#4d7e65" data-background-transition="slide">
-					<script type="text/template">
-						#### 创新点
+						<section data-markdown data-background="#b5533c" data-background-transition="zoom">
+							<script type="text/template">
+								## 创新点
 
-						1. ES2015 AND ES2016
-						2. React Native
-						3. Redux
-						4. Promise AND Genorator
+								1. ES2015 AND ES2016
+								2. React Native
+								3. Redux
+								4. Promise AND Genorator
 
-					</script>
+							</script>
+						</section>
 				</section>
+
 
 				<section data-background="#4d7e65" data-background-transition="slide">
 					<h2>Q & A </h2>
